# quant-trading-system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  config.json  config.json.example
cmake/: futu.cmake
docs/: BUILD_FTAPI.md  BUILD_GUIDE.md  BUILD_OPTIONS.md  BUILD_SYSTEM_SIMPLIFICATION.md  DYNAMIC_STRATEGY_MANAGEMENT.md  EVENT_DRIVEN_ARCHITECTURE.md  EXCHANGE_ABSTRACTION.md  EXCHANGE_BUILD_OPTIONS.md  JSON_CONFIGURATION.md  MARKET_SCANNER_ARCHITECTURE.md  MARKET_SCANNER_USAGE.md  NOTIFICATION_SYSTEM.md
include/common/: constant.h  defines.h  object.h
include/config/: config_manager.h
include/data/: data_subscriber.h
include/event/: event.h  event_engine.h  event_interface.h  event_type.h
include/exchange/: exchange_interface.h  exchange_manager.h  futu_exchange.h  ibkr_exchange.h
include/managers/: position_manager.h  risk_manager.h  strategy_manager.h
include/notification/: notification_example.h  notification_manager.h  notification_queue.h  telegram_sender.h
include/scanner/: market_scanner.h
include/strategies/: momentum_strategy.h  strategy_base.h
include/trading/: order_executor.h
include/utils/: logger.h  logger_defines.h  stringsUtils.h
src/: main.cpp
src/config/: config_manager.cpp
src/data/: data_subscriber.cpp
src/event/: event_engine.cpp
src/exchange/: exchange_factory.cpp  exchange_manager.cpp  futu_exchange.cpp  futu_spi.cpp  futu_spi.h  ibkr_exchange.cpp
src/managers/: position_manager.cpp  risk_manager.cpp  strategy_manager.cpp
src/notification/: notification_demo.cpp  notification_manager.cpp  notification_queue.cpp  telegram_sender.cpp
src/scanner/: market_scanner.cpp
src/strategies/: momentum_strategy.cpp  strategy_base.cpp
src/trading/: order_executor.cpp
src/utils/: logger.cpp  stringsUtils.cpp
test/: market_scanner_test.cpp
